--- a/InstaStay/Areas/HotelManager/Views/ManageHotel/Dashboard.cshtml
+++ b/InstaStay/Areas/HotelManager/Views/ManageHotel/Dashboard.cshtml
@@ -3,10 +3,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@section Scripts {
+@section scripts {
+    @if (@TempData["success"] != null)
+    {
         <script>
-            toastr.success('Welcome to the Hotel Manager Dashboard!');
+            toastr.success('@TempData["success"]')
         </script>
+    }
 }
 <style>
 .sidebar-link {
@@ -17,7 +20,7 @@
 }
 
 .sidebar-link:hover {
-    background-color: #17a2b8; /* Bootstrap info color */
+    background-color: #17a2b8;
     color: #fff;
     text-decoration: none;
 }
@@ -32,7 +35,6 @@
 
 </style>
 <div class="d-flex">
-    <!-- Sidebar -->
     <div class="bg-dark text-light p-3" style="width: 250px; min-height: 100vh;">
         <h4 class="mb-4 text-info">Hotel Manager</h4>
         <ul class="nav flex-column">
@@ -62,8 +64,8 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/HotelManager/Settings" class="nav-link text-light sidebar-link">
-                    <i class="fas fa-cogs me-2"></i> Settings
+                <a href="/HotelManager/Coupon/index" class="nav-link text-light sidebar-link">
+                    <i class="fa-solid fa-ticket me-2"></i> Coupons
                 </a>
             </li>
         </ul>
